force-app/main/default/objects/OW_system_log__c/OW_system_log__c.object-meta.xml
<CustomObject>
    <description>This object is intended to capture technical logs for monitoring and debugging purposes. Automated processes can write failures and successes to it to allow us to understand how they are performing.</description>
    <label>System log</label>
    <nameField>
        <displayFormat>SL-{0}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>