force-app/main/default/objects/OW_system_log__c/fields/OW_description__c.field-meta.xml
<CustomField>
    <fullName>OW_description__c</fullName>
    <description>A text area field where more complete auditing can occur.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>