force-app/main/default/objects/OW_system_log__c/fields/OW_detail__c.field-meta.xml
<CustomField>
    <fullName>OW_detail__c</fullName>
    <description>A text area field in which detail can be captured as part of the process, specific to what needs to be captured as part of that automation.</description>
    <label>Detail</label>
    <type>TextArea</type>
</CustomField>