force-app/main/default/objects/OW_system_log__c/fields/OW_error__c.field-meta.xml
<CustomField>
    <fullName>OW_error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if known to be an error that needs addressing or attention.</description>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>