force-app/main/default/objects/OW_system_log__c/fields/OW_response_code__c.field-meta.xml
<CustomField>
    <fullName>OW_response_code__c</fullName>
    <description>Intended to capture response codes from APIs</description>
    <label>Response code</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>