force-app/main/default/objects/OW_system_log__c/fields/OW_source_type__c.field-meta.xml
<CustomField>
    <fullName>OW_source_type__c</fullName>
    <description>The type of component that created this log - e.g. Apex class.</description>
    <label>Source type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>