force-app/main/default/objects/OW_system_log__c/fields/OW_status__c.field-meta.xml
<CustomField>
    <fullName>OW_status__c</fullName>
    <description>Intended to capture the status of API responses but could also capture similar short messages.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>