force-app/main/default/objects/OW_system_log__c/listViews/Errors.listView-meta.xml
<ListView>
    <fullName>Errors</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OW_error__c</columns>
    <columns>OW_detail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OW_error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Errors</label>
</ListView>